--- a/src/pages/inventoryGrid/GridItem/index.scss
+++ b/src/pages/inventoryGrid/GridItem/index.scss
@@ -5,15 +5,13 @@
   justify-content: center;
   height: 100%;
 
-  background-color: rgb(242, 242, 242);
-  border: 2px solid rgb(84, 84, 84);
+  background-color: var(--color-container);
+  border: 2px solid var(--color-dark);
   border-radius: 4px;
 
   font-size: 24px;
   font-weight: 600;
   text-align: center;
-
-  color: rgb(27, 27, 27);
 
   text-overflow: ellipsis;
 
@@ -31,12 +29,12 @@
     line-height: 0;
     padding: 0;
     border: none;
-    color: rgb(84, 84, 84);
+    color: var(--color-dark);
     cursor: pointer;
     background-color: transparent;
 
     &:hover {
-      color: rgb(27, 27, 27);
+      color: var(--color-text);
     }
   }
 }
