--- a/src/pages/devProdMode/index.scss
+++ b/src/pages/devProdMode/index.scss
@@ -4,7 +4,7 @@
     border-collapse: collapse;
 
     td {
-      border: 1px solid var(--color-dark);
+      border: var(--border);
       padding: 2px 4px;
       font-family: monospace;
       font-size: 16px;
