--- a/src/pages/inventoryGrid/GridItem/index.scss
+++ b/src/pages/inventoryGrid/GridItem/index.scss
@@ -6,8 +6,8 @@
   height: 100%;
 
   background-color: var(--color-container);
-  border: 2px solid var(--color-dark);
-  border-radius: 4px;
+  border: var(--border);
+  border-radius: var(--border-radius);
 
   font-size: 24px;
   font-weight: 600;
