--- a/src/shared/Button/index.scss
+++ b/src/shared/Button/index.scss
@@ -1,8 +1,13 @@
 .Button {
   padding: 0.5rem 1rem;
   font-size: 24px;
-  border-width: 2px;
-  border-color: var(--color-dark);
-  border-radius: 4px;
+  border: var(--border);
+  border-radius: var(--border-radius);
+  background-color: var(--color-container);
   cursor: pointer;
+
+  &:hover{
+    background-color: var(--color-lighter);
+
+  }
 }
