--- a/src/shared/Page/index.scss
+++ b/src/shared/Page/index.scss
@@ -1,3 +1,10 @@
 .Page {
   padding: 0.5rem 1.5rem;
+
+  &--error,
+  &--loading {
+    padding: 1.5rem 1.5rem;
+    text-align: center;
+    font-size: 1.5rem;
+  }
 }
